--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,9 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+
+#theme: landscape
+theme: webstack
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
